# pytensor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION.rst  DESCRIPTION.txt  GOVERNANCE.md  IMPLEMENTATION_NOTES.md  MANIFEST.in  Makefile  PYTENSOR_IMPORT_TEST_RESULTS.md  README.rst  __init__.py  asv.conf.json  conftest.py  debug.md  environment-osx-arm64.yml  environment.yml  experiment-newton.ipynb  new_jax_example.ipynb  pixi.toml  pyproject.toml  pytorch_sandbox_example.ipynb  setup.cfg  setup.py  test.ipynb  test_eigvalsh_grad.py  test_kron.ipynb  versioneer.py
.claude/commands/: review-plan.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml  installation.yml  plain.yml
.github/workflows/: benchmarks.yml  copilot-setup-steps.yml  deptry.yml  mypy.yml  nightly.yml  numba-upper-bound.yml  pypi.yml  rtd-link-preview.yml  slow-tests-issue.yml  test.yml  zizmor.yml
aesara/: __init__.py  _version.py  assert_op.py  breakpoint.py  configdefaults.py  configparser.py  gradient.py  ifelse.py  printing.py  raise_op.py  updates.py  version.py
aesara/compile/: builders.py  compiledir.py  compilelock.py  debugmode.py  io.py  mode.py  monitormode.py  nanguardmode.py  ops.py  profiling.py  sharedvalue.py
aesara/d3viz/: __init__.py  d3viz.py  formatting.py
aesara/graph/: __init__.py  basic.py  fg.py  kanren.py  opt.py  opt_utils.py  optdb.py  toolbox.py  type.py  unify.py  utils.py
aesara/link/: basic.py  utils.py  vm.py
aesara/misc/: check_blas.py  check_duplicate_key.py  elemwise_openmp_speedup.py  latence_gpu_transfert.py  ordered_set.py  pkl_utils.py
aesara/sandbox/: fourier.py  minimal.py  rng_mrg.py  solve.py
aesara/scalar/: basic.py  basic_scipy.py  basic_sympy.py  math.py
aesara/scan/: __init__.py  basic.py  checkpoints.py  op.py  rewriting.py  scan_perform_ext.py  utils.py
aesara/sparse/: __init__.py  basic.py  opt.py  type.py
aesara/tensor/: basic.py  blas.py  blas_headers.py  elemwise.py  elemwise_cgen.py  extra_ops.py  fourier.py  inplace.py  io.py  math.py  nlinalg.py  shape.py  sharedvar.py  sort.py  subtensor.py  subtensor_opt.py  type.py  type_other.py  utils.py  var.py  xlogx.py
aesara/typed_list/: __init__.py  basic.py  rewriting.py  type.py
benchmarks/: bench_blockwise.py  bench_compile.py  bench_elemwise.py  bench_gradient.py  bench_graph.py  bench_jax.py  bench_linalg.py  bench_math.py  bench_numba.py  bench_rewriting.py  bench_scan.py  bench_shape.py  bench_signal.py  bench_subtensor.py  common.py
ci/: ubuntu_test_environment.yml
conda-envs/: ubuntu_test_environment.yml
coverage/: coverage-.xml
doc/: LICENSE.txt  README.md  acknowledgement.rst  benchmarking.rst  blog.md  compilation_for_pymc_users.md  conf.py  core_development_guide.rst  dev_start_guide.rst  environment.yml  faq.rst  generate_dtype_tensor_table.py  glossary.rst  index.rst  install.rst  introduction.rst  links.rst  optimizations.rst  robots.txt  troubleshooting.rst  user_guide.rst
doc/.static/: version_switch.js
doc/.templates/: nb-badges.html  page_dates.html  rendered_citation.html
doc/_drafts/: benchmark_mlx_v_jax_corrected.ipynb
doc/extending/: creating_a_c_op.rst  creating_a_numba_jax_op.rst  creating_an_op.rst  ctype.rst  extending_aesara_solution_1.py  extending_faq.rst  extending_pytensor_solution_1.py  graph_rewriting.rst  graphstructures.rst  index.rst  inplace.rst  op.rst  other_ops.rst  pipeline.rst  scan.rst  tips.rst  type.rst  unification_kanren.rst  unittest.rst  using_params.rst
doc/gallery/: page_footer.md
doc/internal/: how_to_release.rst  metadocumentation.rst  named-dims.ipynb
doc/logo/: PyTensor Logo.ai  PyTensor_Black.ai  PyTensor_CMYK.ai  PyTensor_CMYK.eps  PyTensor_RGB.ai  PyTensor_RGB.eps  PyTensor_white.ai
doc/sandbox/: debugging_with_stepmode.rst  functional.rst  how_to_make_ops.rst  logistic_regression_example.rst  performance.rst  randomnumbers.rst  sandbox.rst  software.rst  sparse.rst
doc/scripts/: docgen.py
doc/tutorial/: adding.rst  adding_solution_1.py  aliasing.rst  broadcasting.rst  conditions.rst  debug_faq.rst  examples.rst  faq_tutorial.rst  gradients.rst  index.rst  loading_and_saving.rst  loop.rst  loop_solution_1.py  modes.rst  modes_solution_1.py  multi_cores.rst  nan_tutorial.rst  printing_drawing.rst  prng.rst  profiling.rst  profiling_example.py  profiling_example_out.prof  shape_info.rst  sparse.rst  symbolic_graphs.rst
notebooks/: Grahpviz rewrites.ipynb  numba_cache.ipynb  widget.css  widget.js
pytensor/: __init__.py  _sparse_lazy.py  _version.py  basic.py  breakpoint.py  configdefaults.py  configparser.py  gradient.py  ifelse.py  ipython.py  looping.py  mermaid.py  mod1.py  npy_2_compat.py  printing.py  raise_op.py  updates.py  utils.py  version.py
pytensor/assumptions/: __init__.py  alloc.py  blockwise.py  core.py  diagonal.py  dimshuffle.py  dot.py  elemwise.py  orthogonal.py  permutation.py  positive_definite.py  reshape.py  scan.py  selection.py  shape.py  specify.py  subtensor.py  symmetric.py  triangular.py
pytensor/compile/: __init__.py  aliasing.py  builders.py  compiledir.py  compilelock.py  debugmode.py  executor.py  inner_function.py  io.py  maker.py  mode.py  monitormode.py  nanguardmode.py  ops.py  profiling.py  rebuild.py  rewriting.py  sharedvalue.py
pytensor/d3viz/: d3viz.py  formatting.py
pytensor/graph/: __init__.py  basic.py  destroyhandler.py  features.py  (+10 more)
results/: benchmarks.json
scripts/: bump_numba_upper_bound.py  check_numba_veclib.py  downstream_pr.sh  environment-blas.yml  generate-pixi-toml.py  generate_gallery.py  mypy-failing.txt  run_mypy.py
tests/: fixtures.py  test_basic.py  test_breakpoint.py  test_config.py  test_gradient.py  test_ifelse.py  test_looping.py  test_mermaid.py  test_printing.py  test_raise_op.py  test_rop.py  test_updates.py  unittest_tools.py
(+1081 files in other folders)
